assets/css/style.css
@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700');
:root {
    --primary-color: #e46e55;
    --secondary-color: #84cab7;
    --tertiary-color: #493657;
    --quaternary-color: #ffd670;
    --accents: #cfbae1;
    --text-color: #fff;
    --background-color: #000;
    --lightblack: #333;
    --lightgrey: lightgrey;
    font-family: 'Roboto', Helvetica, Arial, sans-serif;
    font-size: clamp(0.76rem, 1.05vw, 3rem);
    text-underline-offset: 0.12rem;
}
body.light-mode {
    --text-color: #000;
    --background-color: #fff;
}
    body.light-mode hr {
        border-color: var(--tertiary-color);
    }
    body.light-mode #themeToggle a {
        filter: none;
    }
    body.light-mode #themeToggle a:active {
        background-color: var(--background-color);
    }
#sun {
    display: inline-block;
    vertical-align: middle;
    width: 50px;
    height: auto;
    max-width: 100%;
    max-height: 100%;
}
a {
    color: var(--text-color);
}
a:visited {
    color: var(--secondary-color);
}
body {
    margin: 0;
    background-color: var(--background-color);
    color: var(--text-color);
}
main {
    margin: 1vw 2vw 0 2vw;
}
#themeToggle {
    flex: 1;
    margin: 0.25rem;
}
#themeToggle.force-repaint {
    display: inline-block; /* Any property that forces a re-render */
}
    #themeToggle a {
        display: inline-block;
        padding: 0.5rem 1rem; /* Adjust padding to match other links */
        border: 2px solid var(--text-color); /* Add border to match other links */
        color: var(--text-color); /* Set text color */
        text-decoration: none; /* Remove underline */
        transition: color 0.25s ease, background-color 0.25s ease; /* Add transition for hover effect */
    }
    #themeToggle a:is(:hover, :focus, :active) {
        background-color: var(--text-color); /* Match hover background color */
        color: var(--background-color); /* Match hover text color */
        text-decoration: underline; /* Match hover underline */
        filter: none; /* Remove any filters */
    }
#headerNav #themeToggle a {
    display: inline-block;
    border: unset;
    padding: 0;
    filter: invert(1);
}
#siteHeader, #siteFooter div {
    width: 100%;
    margin: 0;
    padding: 0;
    display: flex;
    justify-content: space-between;
    align-items: center;
}
#siteHeader {
    height: 10vh;
}
    :is(#siteHeader, #siteFooter) nav ul {
        padding: 0;
        margin-right: 1.5rem;
        list-style-type: none;
        display: flex;
        justify-content: space-around;
        align-items: center;
    }
        :is(#siteHeader, #siteFooter) nav li {
            margin: 0;
        }
            :is(#siteHeader, #siteFooter) nav a {
                vertical-align: middle;
                box-sizing: content-box; /* Make sure both are content-box */
                transition: color 0.25s ease, background-color 0.25s ease, filter 0.25s ease;
                border: 2px solid var(--text-color);
                color: var(--text-color);
                text-decoration: none;
                font-size: 1.2rem;
                padding: 0.5rem;
                line-height: 2rem;
                overflow: hidden;
            }
            :is(#siteHeader, #siteFooter) nav a:is(:hover, :focus, :active) {
                text-decoration: underline;
                background-color: var(--text-color);      
            color: var(--background-color) !important;
            border-color: var(--background-color);
            }
            #siteHeader nav a#currentPage {
                border-color: var(--primary-color);
            }
#siteFooter > div > small {
    margin-left: 1.5rem;
}
/* centers content and gives it room to breathe */
.center {
    text-align: center;
    border: 0.1rem double;
    padding: 1rem 2rem;
    margin: 1rem auto;
    width: fit-content;
}
#social {
    border: 1px solid #fff;
    margin: 2vw auto;
    padding: 1rem;
}
    #social ul {
        display: flex;
        justify-content: space-evenly;
        align-items: center;
        padding: 0;
        margin: auto;
        list-style-type: none;
    }
        #social li {
            margin: 0.5rem 0.2rem;
        }
            #social a {
                vertical-align: middle;
                box-sizing: content-box; /* Make sure both are content-box */
                transition: color 0.25s ease, background-color 0.25s ease;
                border: 2px solid #fff;
                color: #fff;
                text-decoration: none;
                font-size: 1.2rem;
                padding: 0.5rem;
            }
            #social a:hover {
                text-decoration: underline;
            }
            #social a:is(:hover, :focus) {
                background-color: var(--text-color);
                color: var(--background-color);
            }
            #social a#currentPage {
                border-color: var(--primary-color);
            }
#bandcampPlayer {
    display: block;
    border: 0;
    width: 700px;
    height: 472px;
    overflow: hidden;
    margin: 1rem auto;
}
#homeLink {
    text-decoration: none;
    color: inherit;
}
#siteInfo {
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    height: 80%;
}
    #siteInfo #logo {
        margin: 0.5rem;
        border: 0.1rem solid;
    }
    #siteInfo #logo, #siteInfo #logo img {
        display: block;
        height: 100%;
        width: auto;
    }
#siteFooter {
    position: sticky;
    bottom: 0;
    z-index: 100;
    background-color: var(--background-color);
}
    #footerNav a {
        border: 2px solid var(--quaternary-color);
        color: var(--text-color);
    }
    body.light-mode #footerNav a {
        border: 2px solid var(--tertiary-color);
    }
#menu-toggle {
    display: none;
}
.hamburger-menu {
    display: none;
    cursor: pointer;
    height: 30px;
    width: 30px;
    flex-direction: column;
    justify-content: space-around;
}

    .hamburger-menu .bar {
    height: 3px;
    width: 100%;
    background-color: var(--text-color);
    }
hr {
    margin: 0;
    border: 0;
    border-top: 0.1rem solid var(--accents);
}
.skip-link {
    position: absolute;
    top: -40px;
    left: 0;
    background: #000;
    color: #fff;
    padding: 8px;
    z-index: 100;
    transition: top 0.3s;
}
    .skip-link:focus {
        top: 0;
    }
@media (max-width: 768px) {
    .hamburger-menu {
        display: flex;
        margin: 0 1rem;
        cursor: pointer;
        z-index: 101; /* Ensure hamburger menu stays on top */
    }
    .hamburger-menu .bar {
        width: 25px;
        height: 3px;
        background-color: var(--text-color);
        margin: 4px 0;
        transition: 0.4s;
    }
    #headerNav ul {
        display: flex;
        flex-direction: column;
        justify-content: flex-start;
        position: fixed;
        top: 0;
        left: -100%;
        height: 100%;
        width: 100%;
        background-color: var(--background-color);
        transition: left 0.3s ease, opacity 0.3s ease;
        z-index: 100; /* Ensure sidebar is below the hamburger menu */
        opacity: 0;
        margin: 0;
    }
    #headerNav a {
        display: block;
        text-align: center;
        padding: 1em;
        font-size: 1.5rem;
    }
    #headerNav li {
        display: block;
        margin-top: 1rem;
        width: 100%;
    }
    #menu-toggle:checked ~ #headerNav ul {
        opacity: 1;
        left: 0;
    }
    #menu-toggle:checked ~ #headerNav ~ .hamburger-menu {
        background-color: var(--lightblack);
    }
    #menu-toggle:checked ~ #headerNav ~ .hamburger-menu .bar {
        background-color: #fff;
    }
    #bandcampPlayer {
        width: 100%;
        height: auto;
    }
    #homeLink {
        pointer-events: none;
        cursor: default;
    }
    #social {
        padding: 0 0.25rem;
    }
}

